Fix for layout issue with scrollbars

--- a/app/assets/stylesheets/songs/songs_general.scss
+++ b/app/assets/stylesheets/songs/songs_general.scss
@@ -37,5 +37,5 @@ header {
   float: left;
   margin-left: 20px;
   vertical-align: top;
-  width: 310px;
+  width: 300px;
 }
